# bobby-programming-bitcoin

./: pyproject.toml
notes/: Chapter2.ipynb
prgbitcoin/: ecc.py  helper.py
