[tool.poetry]
name = "bobby-programming-bitcoin"
version = "0.1.0"
description = ""
authors = ["Boseong Choi <cbscsm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
